[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Tyler Wozniak <wozniak.ty@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.0"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
